# AgentShell

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  paper.md  pyproject.toml  test.py  tester.py  tools.py  utils.py
attacker-server/: attacker_key
data/: categories.json  commands.json  commands.txt  commands_rules.json  cowrie.json  filesystem.pkl  llm-qwen.json  llm_base.json  run.py  scenarios_rules.json  vm.json
datasets/: attack_scenarios.json  commands.json  commands_rules.json  man_pages.json  scenarios.json  scenarios_rules.json
datasets/commands/: control.json  cowrie.json  debian.json  devstral.json  fei+devstral.json  fei+gpt-4o-mini.json  gpt-4o-mini.json  gpt-4o.json  llama-3.1-norag.json  llama-3.1.json  llama3_1.json  qwen3.5.json
datasets/scenarios/: control.json  cowrie.json  debian.json  devstral.json  fei+devstral.json  fei+gpt-4o-mini.json  gpt-4o-mini.json  gpt-4o.json  llama-3.1-norag.json  llama-3.1.json  llama3_1.json  qwen3.5.json
docker/: Dockerfile  attacker-server.Dockerfile  attacker_key  attacker_key.pub  debian-sandbox.Dockerfile  docker-compose.yml  install.sh
elk-stack/: filebeat.yml
output/: history.db  results.md
output/agentshell/: commands.json
output/control/: commands.json
output/devstral-mem/: history.db  results.md
output/devstral-nomem/: history.db  (+1 more)
results/: results.md
src/: believability.py  filesystem.py  main.py  ssh_server.py  test.py  tester.py  tools.py  utils.py
tests/: conftest.py  test_agent.py  test_filesystem.py  test_tools.py  test_utils.py
(+42 files in other folders)
