[project]
name = "AgentShell"
version = "0.1.0"
description = "Honeypot simulation system using LLM agents to study attacker behavior patterns compared to traditional honeypots."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "openai>=1.0.0",
    "paramiko>=4.0.0",
    "pydantic>=2.12.5",
]
